--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^12.12.21",
     "@types/uuid": "^7.0.2",
     "@types/joi": "^14.3.2",
+    "@types/cors": "^2.8.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "copyfiles": "^2.1.0",
@@ -45,6 +46,7 @@
     "uuid": "^7.0.3",
     "js-sha256": "^0.9.0",
     "axios": "^0.19.0",
-    "joi": "^14.3.1"
+    "joi": "^14.3.1",
+    "cors": "^2.8.4"
   }
 }
